# bevy_game_test

./: Cargo.toml  Makefile  README.md
.github/: Dockerfile
.github/workflows/: deploy.yml  rust.yml
assets/: credits.md
camera/: Cargo.toml
camera/src/: lib.rs
src/: audio.rs  castles.rs  common.rs  doc_plugin.rs  health.rs  health_bar.rs  main.rs  minions.rs  pause.rs  physics.rs  player.rs  racks.rs  states.rs  teams.rs
web/: index.html
