[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
bevy = "0.12.0"
bevy_rapier2d = "0.23.0"
rand = "0.8.5"
blake3 = { version = "1.5", features=["pure"] }
bevy_turborand = "0.7.0"
fasthash = "0.4.0"
bevy_cameraman = "0.1.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
